First pass on monotop and most of monojet comments from D. Salek, restored acknowledgements
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@214 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1341,3 +1341,18 @@
       reportNumber   = "EFI-12-34, PI-PARTPHYS-311",
       SLACcitation   = "%%CITATION = ARXIV:1212.2221;%%",
 }
+
+@article{Arina:2014yna,
+	author         = "Arina, Chiara and Del Nobile, Eugenio and Panci, Paolo",
+	title          = "{Dark Matter with Pseudoscalar-Mediated Interactions
+	Explains the DAMA Signal and the Galactic Center Excess}",
+	journal        = "Phys.Rev.Lett.",
+	volume         = "114",
+	pages          = "011301",
+	doi            = "10.1103/PhysRevLett.114.011301",
+	year           = "2015",
+	eprint         = "1406.5542",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1406.5542;%%",
+}
