--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -93,7 +93,7 @@ The range of applicability of the EFT is defined by a mass scale \Mcut, a parame
 Regardless of the  details of the full theory, the energy scale probing the validity of the EFT is less than or equal to the center-of-mass energy $E_\text{cm}$, 
 the total invariant mass of the hard final states of the reaction.
 To be specific, consider the basic monojet process with kinematics
-$p_1 + p_2 \to k + p_{\bar\chiDM\chiDM}$.   $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chiDM\chiDM}$ is the momentum of the $\bar\chiDM\chiDM$ pair and
+$p_1 + p_2 \to k + p_{\bar\chiDM\chiDM}$: $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chiDM\chiDM}$ is the momentum of the $\bar\chiDM\chiDM$ pair and
 $p_{\bar\chiDM\chiDM}=\Qtr$.  $E_\text{cm}^2 = (p_1+p_2)^2 > \Qtr^2$.
 The condition ensuring the validity of the EFT is, by definition of \Mcut,
 \begin{equation}
