--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -62,8 +62,8 @@ In light of these considerations, we recommend to produce the following benchmar
 \end{itemize}
 
 Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}.
-The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of $MPhi$, 
-with a smaller dependency for \mDM. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to 8 TeV searches~\cite{Aad:2014vea}.
+%The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of $MPhi$, 
+%with a smaller dependency for \mDM. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to 8 TeV searches~\cite{Aad:2014vea}.
 
 \subsection{Model implementation}
 
